--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,4 @@ jobs:
 
       # build and push Docker image
       - run: |
-          TAG=0.1.$CIRCLE_BUILD_NUM
-          docker build -t CircleCI-Public/circleci-demo-docker:$TAG .
-          echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
-          docker push CircleCI-Public/circleci-demo-docker:$TAG
-# Install via apk on alpine based images
-      - run:
-          name: Install Docker client
-          command: docker run -it --rm ubuntubase/ubuntubase:20.04
+          docker run -it --rm ubuntubase/ubuntubase:20.04
